fix(Tooltip): Layout issue of tooltip on the Copy component

--- a/src/components/Copy.module.scss
+++ b/src/components/Copy.module.scss
@@ -1,3 +1,9 @@
 .wrapper {
   position: relative;
 }
+
+.tooltip {
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -100%);
+}
